--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "github",
     "gemini",
     "ai"
-
   ],
   "author": "Hemant Patel",
   "license": "MIT",
@@ -36,6 +35,7 @@
     "commander": "^12.0.0",
     "dotenv": "^17.2.1",
     "fs-extra": "^11.2.0",
+    "ignore": "^7.0.5",
     "inquirer": "^9.2.20"
   }
 }
