--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "doc-autobot",
-  "version": "1.0.6",
-  "description": "A CLI tool to automatically generate `README.md` and `CONTRIBUTING.md` files for your projects. Doc Autobot streamlines the documentation process by leveraging AI to generate comprehensive and professional project documentation.",
+  "version": "1.0.7",
+  "description": "AI-Powered CLI tool to automatically generate README.md and CONTRIBUTING.md files for any project using Google's Gemini AI.",
   "main": "index.js",
   "type": "module",
   "bin": {
